--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,10 @@
     <string name="error_passwords_not_match">Passwords do not match</string>
     <string name="error_name_required">Full name is required</string>
     <string name="error_phone_required">Phone number is required</string>
+    
+    <!-- Navigation Drawer -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="profile_image">Profile Image</string>
+    <string name="back">Back</string>
 </resources>
