feat: Implement Edit Profile functionality and UI updates
- Added EditProfileActivity for user profile editing with fields for full name, phone number, and occupation.
- Integrated SupabaseClient for fetching and updating user profile data.
- Created layout for EditProfileActivity with Material Design components.
- Added color resources for switch thumb and track colors.
- Introduced drawable resources for various UI elements including background shapes and placeholders.
- Implemented a booking receipt dialog layout with detailed booking information.
- Added image upload item layout for displaying uploaded images.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,18 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="profile_image">Profile Image</string>
     <string name="back">Back</string>
+
+    <!-- Add Listing Strings -->
+    <string name="property_photos">Property Photos</string>
+    <string name="property_name_hint">Enter property name</string>
+    <string name="description_hint">Enter description</string>
+    <string name="full_address_hint">Enter full address</string>
+    <string name="monthly_rent_hint">Enter monthly rent</string>
+    <string name="security_deposit_hint">Enter security deposit</string>
+    <string name="wi_fi">Wi-Fi</string>
+    <string name="ac">Air Conditioning</string>
+    <string name="furnished">Furnished</string>
+    <string name="kitchen">Kitchen</string>
+    <string name="parking">Parking</string>
+    <string name="save_and_publish">Save and Publish</string>
 </resources>
